# Functional-Cxx

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  flat-iterator.cc  lazy-wrapper.cc  optional-each.cc  optional.cc  streams.cc
include/functional/: lazy-wrapper.hpp  stream.hpp
include/functional-cxx/: flat-iterator.hpp  lazy-wrapper.hpp  optional-utils.hpp  stream.hpp
include/functional-cxx/support/: memory-hacks.hpp  unique-function.hpp
include/functional/support/: unique-function.hpp
